# Axpoi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  axpoi.c  axpoi.ini  clear.sh  consts.h
conf/: config.c  config.h
network/: data_types.h  portable.h  rak_pkg.h  udp_socket.c  udp_socket.h
plugin/: plugin.c  plugin.h  plugin_c.c  plugin_c.h
utils/: filter_char.h
utils/list/: list.c  list.h
world/: vector_three_dimensional.c  vector_three_dimensional.h
